# docutil

./: .gitignore  .pre-commit-config.yaml  README.md  USERGUIDE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.ipynb_checkpoints/: ci-checkpoint.yml
docs/: CHANGELOG.md  architecture.md  cli-reference.md  contributing.md  getting-started.md  index.md  versioning.md
docs/architecture/: technical-design.md
docs/planning/: project-charter.md  requirements.md  risk-register.md  timeline.md
docs/planning/.ipynb_checkpoints/: deployment-plan-checkpoint.md  post-implementation-review-checkpoint.md
docs/qa/: cli-functional-test-guide.md  qa-signoff.md
docs/qa/.ipynb_checkpoints/: test-plan-checkpoint.md
docs/training/.ipynb_checkpoints/: training-plan-checkpoint.md
src/docutil/: __init__.py  cli.py  doctor.py  errors.py  logging_config.py  logging_utils.py  pandoc_utils.py
src/docutil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docutil/.ipynb_checkpoints/: __main__-checkpoint.py  cli-checkpoint.py  pandoc_utils-checkpoint.py
src/docutil/conversions/: __init__.py  batch.py  docx_to_markdown.py  markdown_to_docx.py
src/docutil/conversions/.ipynb_checkpoints/: batch-checkpoint.py  docx_to_markdown-checkpoint.py  markdown_to_docx-checkpoint.py
src/docutil/inspect/: docx_metadata.py  pdf_extract.py
src/docutil/inspect/.ipynb_checkpoints/: pdf_extract-checkpoint.py
src/docutil/templates/: __init__.py
src/docutil/utils/: __init__.py  version_bump.py  versioning.py
test_docs/: custom.docx  custom.md  test.docx  test.md
test_docs/output/MyProject/: .gitignore  README.md
tests/: conftest.py  test_batch_versioning.py  test_cli_smoke.py  test_docx2md.py  test_paths.py  test_versioning.py
tests/.ipynb_checkpoints/: conftest-checkpoint.py  test_batch-checkpoint.py  test_docx2md-checkpoint.py  test_md2docx-checkpoint.py  test_smoke_cli-checkpoint.py
