# ============================================================================
# docutil - Enterprise Document Utility Toolkit
# ============================================================================

[project]
name = "docutil"
version = "0.1.0"
description = "Enterprise-grade document utility toolkit (DOCX/Markdown/PDF) powered by Pandoc + Python."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Richie Garafola" }]

# ----------------------------------------------------------------------------
# Runtime Dependencies
# ----------------------------------------------------------------------------
# typer      -> CLI framework
# pypandoc   -> Pandoc bridge
# tqdm       -> batch progress bars
# packaging  -> semantic version checks (Pandoc minimum version enforcement)
# ----------------------------------------------------------------------------

dependencies = [
  "typer>=0.12",
  "pypandoc>=1.13",
  "tqdm>=4.66",
  "packaging>=24.0"
]


# ----------------------------------------------------------------------------
# Optional Feature Groups
# ----------------------------------------------------------------------------
# docx  -> metadata inspection
# pdf   -> text extraction
# dev   -> linting / testing / typing
# ----------------------------------------------------------------------------

[project.optional-dependencies]
docx = ["python-docx>=1.1.2"]
pdf = ["pymupdf>=1.24.0"]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]


# ----------------------------------------------------------------------------
# CLI Entry Point
# ----------------------------------------------------------------------------

[project.scripts]
docutil = "docutil.cli:app"


# ----------------------------------------------------------------------------
# src/ Layout Configuration (CRITICAL FOR INSTALLS)
# ----------------------------------------------------------------------------
# Without this, `pip install -e .` may not find your package.
# ----------------------------------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E402",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["docutil"]


[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# Build System
# ----------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
